# uk-student-visa-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
data/processed/: gov-uk__graduate-visa.md  gov-uk__graduate-visa__course-you-studied.md  gov-uk__graduate-visa__how-much-it-costs.md  gov-uk__healthcare-immigration-application.md  gov-uk__student-visa.md  gov-uk__student-visa__course.md  gov-uk__student-visa__extend-your-visa.md  gov-uk__student-visa__family-members.md  gov-uk__student-visa__knowledge-of-english.md  gov-uk__student-visa__money.md  gov-uk__student-visa__switch-to-this-visa.md  nhs-uk__nhs-services__gps__how-to-register-with-a-gp-surgery.md  nhs-uk__nhs-services__visiting-or-moving-to-england__moving-to-england-from-outside-the-european-economic-area-eea.md  ukcisa-org-uk__student-advice__finances__opening-a-bank-account.md  ukcisa-org-uk__student-advice__life-in-the-uk__healthcare.md  ukcisa-org-uk__student-advice__visas-and-immigration__student-immigration-the-basics.md  ukcisa-org-uk__student-advice__visas-and-immigration__student-route-applying-in-the-uk.md  ukcisa-org-uk__student-advice__working__student-work.md  ukcisa-org-uk__student-advice__working__working-in-the-uk.md
eval/: evaluate.py  results.md  test_set.json
scripts/: 1_scrape.py  2_build_index.py
src/: config.py  prompts.py
src/chunking/: splitter.py
src/generation/: llm.py  (+1 more)
tests/: test_chunking.py  test_cleaner.py  test_config.py  test_pipeline.py  test_retrieval.py
(+5 files in other folders)
