[project]
name = "uk-student-visa-rag"
version = "0.1.0"
description = "Retrieval-Augmented Generation Q&A assistant for UK student visa and study-life policies."
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
# Make the project root importable so tests can do `from src.config import settings`.
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
